--- a/templates/site/listeRub.html.twig
+++ b/templates/site/listeRub.html.twig
@@ -1,6 +1,6 @@
    {% extends 'base.html.twig' %}
 
-{% block title %}Hello RubriquesController!{% endblock %}
+{% block title %}accueil{% endblock %}
 
 
 
