--- a/templates/site/liste.html.twig
+++ b/templates/site/liste.html.twig
@@ -1,16 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AnnonceController!{% endblock %}
+{% block title %}Mes annonces{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+
 
 <h2>Liste de vos annonces</h2>
-
-
 
 <table class="table table-striped">
 
@@ -57,13 +52,13 @@
                 <form action="/annonce/edit/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
                 <input type="text" name="iduser" value={{app.user.id}} hidden>
-                <button type="submit" name="save" class="btn btn-info btn-sm">Editer</button></form>
+                <button type="submit" name="save" class="btn btn-info btn-sm">Modifier</button></form>
             </td>
             <td class="align-middle text-center">
                 <form action="/annonce/delete/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
                 <input type="text" name="iduser" value={{app.user.id}} hidden>
-                <button type="submit" name="save" class="btn btn-danger btn-sm">Effacer</button></form>
+                <button type="submit" name="save" class="btn btn-danger btn-sm">Supprimer</button></form>
             </td>
             {% endif %}               
         </tr>
