--- a/templates/site/liste.html.twig
+++ b/templates/site/liste.html.twig
@@ -1,18 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes annonces{% endblock %}
+{% block title %}Liste de vos annonces{% endblock %}
 
 {% block body %}
-
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
 
 <h2>Liste de vos annonces</h2>
 
-<table class="table table-striped">
 
+
+<table class="table table-striped">
     <thead>
         <tr>
             <th class="text-center align-middle">Titre de l'annonce</th>
-            <th class="text-center align-middle col-2">Contenu de l'annonce</th>
+            <th class="text-center align-middle">Contenu de l'annonce</th>
             <th class="text-center align-middle">Date de création</th>
             <th class="text-center align-middle">Date de validité</th>
             <th class="text-center align-middle">Image</th>
@@ -52,13 +56,13 @@
                 <form action="/annonce/edit/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
                 <input type="text" name="iduser" value={{app.user.id}} hidden>
-                <button type="submit" name="save" class="btn btn-info btn-sm">Modifier</button></form>
+                <button type="submit" name="save" class="btn btn-info btn-sm">Editer</button></form>
             </td>
             <td class="align-middle text-center">
                 <form action="/annonce/delete/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
                 <input type="text" name="iduser" value={{app.user.id}} hidden>
-                <button type="submit" name="save" class="btn btn-danger btn-sm">Supprimer</button></form>
+                <button type="submit" name="save" class="btn btn-danger btn-sm">Effacer</button></form>
             </td>
             {% endif %}               
         </tr>
