--- a/templates/site/liste.html.twig
+++ b/templates/site/liste.html.twig
@@ -14,7 +14,7 @@
 
 <table class="table table-striped">
 
-    <thead>
+    {# <thead>
         <tr>
             <th class="text-center align-middle">Titre de l'annonce</th>
             <th class="text-center align-middle col-2">Contenu de l'annonce</th>
@@ -25,7 +25,7 @@
             <th class="text-center align-middle">Editer</th>
             <th class="text-center align-middle">Effacer</th>
         </tr>
-    </thead>   
+    </thead>    #}
     <tbody>
     {% for key, value in annonce %}
         <tr>
@@ -47,11 +47,13 @@
                 {% else %}
                 <td class="align-middle text-center">Pas d'image</td>
             {% endif %}
+            {# show #}
             <td class="align-middle text-center">
                 <form action="/annonce/show/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
                 <button type="submit" name="save" class="btn btn-info btn-sm">Afficher</button></form>
             </td>
+            {# edit #}
             {% if app.user.id == value.userid %}
             <td class="align-middle text-center">
                 <form action="/annonce/edit/{{value.id}}" method="post">
@@ -59,6 +61,7 @@
                 <input type="text" name="iduser" value={{app.user.id}} hidden>
                 <button type="submit" name="save" class="btn btn-info btn-sm">Editer</button></form>
             </td>
+            {# delete #}
             <td class="align-middle text-center">
                 <form action="/annonce/delete/{{value.id}}" method="post">
                 <input type="text" name="id" value={{value.id}} hidden>
