--- a/templates/site/listePrecise.html.twig
+++ b/templates/site/listePrecise.html.twig
@@ -13,7 +13,7 @@
 
 
 <table class="table table-striped">
-    <thead>
+    {# <thead>
         <tr>
             <th class="text-center align-middle">Titre de l'annonce</th>
             <th class="text-center align-middle">Contenu de l'annonce</th>
@@ -23,7 +23,7 @@
             <th class="text-center align-middle">Editer</th>
             <th class="text-center align-middle">Effacer</th>
         </tr>
-    </thead>   
+    </thead>    #}
     <tbody>
     {% for key, value in annonce %}
         <tr>
@@ -61,7 +61,4 @@
         {% endfor %}
     </tbody>
 <table>
-
-
-
 {% endblock %}
