--- a/templates/site/createRubrique.html.twig
+++ b/templates/site/createRubrique.html.twig
@@ -1,4 +1,4 @@
- {# {% extends 'base.html.twig' %}
+ {% extends 'base.html.twig' %}
 
  {% form_theme formRubrique 'bootstrap_4_layout.html.twig' %}
 
@@ -19,4 +19,4 @@
                     {% endif %}
                 </button>
         {{ form_end(formRubrique) }}
- {% endblock %} #}
+ {% endblock %} 
